# CEFC

./: .gitignore  CMakeLists.txt  config  config.txt  main.cpp
src/: ConfigReader.cpp  ConfigReader.h  Engine.cpp  Engine.h  EnginePair.cpp  EnginePair.h  Fight.cpp  Fight.h  FightHistory.cpp  FightHistory.h  FightOrganizer.cpp  FightOrganizer.h  Utilities.cpp  Utilities.h
